[package]
name = "fejd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.0.0"
fixed = "1.23.1"
raylib = { git = "https://github.com/litten2up/raylib-rs", features = ["wayland"], branch = "4.5.0" }
toml = "0.7.6"