[package]
name = "fejd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cordic = "0.1.5"
fastrand = "2.0.0"
fixed = "1.24.0"
raylib = { git = "https://github.com/litten2up/raylib-rs", features = ["wayland"], branch = "4.5.0" }
toml = "0.7.6"
